<resources>
    <string name="app_name">Ssutudy</string>
    <string name="title_home">홈</string>
    <string name="title_mystudy">내 스터디</string>
    <string name="title_settings">설정</string>

    <!-- Common -->
    <string name="app_name_ko">페이스메이커</string>

    <!-- Auth -->
    <string name="auth_missing_info">아이디 혹은 비밀번호를 잊으셨나요?</string>
    <string name="auth_title_message">당신의 곁에서 공부를 도와주는</string>
    <string name="auth_forgot_pw">비밀번호 잊어버렸어요</string>

    <string name="auth_login">로그인</string>
    <string name="auth_signup">가입하기</string>
    <string name="auth_email">이메일</string>
    <string name="auth_signup_email">이메일 형식으로 적어주세요</string>
    <string name="auth_signup_pw">영문+숫자 조합 8-16자리</string>
    <string name="auth_pw">비밀번호</string>
    <string name="auth_major">전공</string>
    <string name="auth_name">이름</string>
    <string name="auth_pw_check">비밀번호 확인</string>
    <string name="auth_student_card">학생증 인증</string>
    <string name="auth_signin">완료</string>
    <string name="auth_signup_eng">SIGN UP</string>

    <string name="auth_error_blank_signup_name">학생증 인증을 해주세요</string>
    <string name="auth_error_blank_signup_major">학생증 인증을 해주세요</string>
    <string name="auth_error_blank_signup_email">이메일을 입력해 주세요</string>
    <string name="auth_error_blank_signup_pw">비밀번호를 입력해 주세요</string>
    <string name="auth_error_blank_signup_pw_check">비밀번호를 한번 더 입력해 주세요</string>
    <string name="auth_error_regex_email">이메일 형식이 올바르지 않습니다</string>
    <string name="auth_error_regex_password">비밀번호는 숫자, 문자, 특수문자 포함 8~20자로 입력해 주세요</string>
    <string name="auth_error_password_check">두 비밀번호가 일치하지 않습니다</string>
    <string name="auth_camera_instruction">프레임에 사진을 맞춰주세요</string>

</resources>


