<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:id="@+id/auth_title_login"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/auth_signup"
        android:paddingStart="20dp"
        android:textSize="30sp"
        android:textColor="@color/mainTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/auth_title_login"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_edittext_signup_name"
            android:background="@drawable/editview_auth_input"
            android:hint="@string/auth_name"
            android:maxLength="20"
            android:textSize="15sp"
            android:enabled="false"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_edittext_signup_major"
            android:background="@drawable/editview_auth_input"
            android:hint="@string/auth_major"
            android:maxLength="20"
            android:textSize="15sp"
            android:enabled="false"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_edittext_singup_id"
            android:background="@drawable/editview_auth_input"
            android:hint="@string/auth_id"
            android:maxLength="20"
            android:textSize="15sp"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_edittext_signup_pw"
            android:background="@drawable/editview_auth_input"
            android:hint="@string/auth_pw"
            android:maxLength="20"
            android:textSize="15sp"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_edittext_signup_pw_check"
            android:background="@drawable/editview_auth_input"
            android:hint="@string/auth_pw_check"
            android:maxLength="20"
            android:textSize="15sp"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="70dp"
            android:inputType="textNoSuggestions" />

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_button_student_card"
            android:background="@drawable/button_line_maintheme"
            android:textSize="15sp"
            android:text="@string/auth_student_card"
            android:textColor="@color/mainTheme"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_button_signin_from_signup"
            android:background="@drawable/button_filled_maintheme"
            android:textSize="15sp"
            android:text="@string/auth_signin"
            android:textColor="#ffffff" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>